--- a/superfly-jira-integration/src/main/config/superfly/superfly.properties
+++ b/superfly-jira-integration/src/main/config/superfly/superfly.properties
@@ -1,7 +1,7 @@
 subsystem.name=jira
 principal.name=jira
 actions.list=jira-users,jira-developers,jira-administrators
-superfly.sso.service.url=/superfly/remoting/sso.service
+superfly.sso.service.url=/superfly/remoting/sso.xremoting.service
 superfly.sso.service.host=localhost
 superfly.sso.service.secure.port=8446
 
