Added protection for notification listeners (by IP)
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@455 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-jira-integration/src/main/config/superfly/superfly.properties
+++ b/superfly-jira-integration/src/main/config/superfly/superfly.properties
@@ -9,3 +9,6 @@ context.keystoreResource=classpath:superfly/stores/jira_ks
 context.keystorePassword=changeit
 context.truststoreResource=classpath:superfly/stores/ca_ts
 context.truststorePassword=changeit
+
+notification.allowed.ips=
+#notification.allowed.ips=127.0.0.1,192.168.0.1
