Upgraded jdbc-proc to 1.0-27
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@458 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/pom.xml
+++ b/pom.xml
@@ -156,8 +156,8 @@
 			</dependency>
 			<dependency>
 				<artifactId>jdbc-proc-daofactory</artifactId>
-				<groupId>com.googlecode.jdbc-proc</groupId>
-				<version>1.0-23</version>
+				<groupId>com.googlecode.jdbc-proc.jdbc-proc</groupId>
+				<version>1.0-27</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
