Added slf4j to tests so they run successfully
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@461 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-client-opt/pom.xml
+++ b/superfly-client-opt/pom.xml
@@ -33,5 +33,10 @@
 			<artifactId>spring-security-core-tiger</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
