--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,12 @@
 				<artifactId>jdbc-proc-daofactory</artifactId>
 				<groupId>com.googlecode.jdbc-proc.jdbc-proc</groupId>
 				<version>1.0-27</version>
+				<exclusions>
+					<exclusion>
+						<artifactId>spring-jdbc</artifactId>
+						<groupId>org.springframework</groupId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
