--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -46,5 +46,9 @@
 	    	<groupId>commons-httpclient</groupId>
 	    	<artifactId>commons-httpclient</artifactId>
 	    </dependency>
+        <dependency>
+            <groupId>org.opensymphony.quartz</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
 	</dependencies>
 </project>
