--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>superfly-parent</artifactId>
 	<packaging>pom</packaging>
 	<name>Superfly parent project</name>
-	<version>1.1-3-SNAPSHOT</version>
+	<version>1.2-1-SNAPSHOT</version>
 	<description>Parent POM of the Superfly project</description>
 	<modules>
 		<module>superfly-remote-api</module>
@@ -123,48 +123,48 @@
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-remote-api</artifactId>
-				<version>1.1-3-SNAPSHOT</version>
+				<version>1.2-1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-service</artifactId>
-				<version>1.1-3-SNAPSHOT</version>
+				<version>1.2-1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-httpclient-ssl</artifactId>
-				<version>1.1-3-SNAPSHOT</version>
+				<version>1.2-1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-common</artifactId>
-				<version>1.1-3-SNAPSHOT</version>
+				<version>1.2-1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-client</artifactId>
-				<version>1.1-3-SNAPSHOT</version>
+				<version>1.2-1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-client-opt</artifactId>
-				<version>1.1-3-SNAPSHOT</version>
+				<version>1.2-1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-spring-security-common</artifactId>
-				<version>1.1-3-SNAPSHOT</version>
+				<version>1.2-1-SNAPSHOT</version>
 			</dependency>
 			
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring</artifactId>
-				<version>2.5.6.SEC01</version>
+				<version>${spring.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-webmvc</artifactId>
-				<version>2.5.6.SEC01</version>
+				<version>${spring.version}</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.springframework</groupId>
@@ -191,7 +191,7 @@
 			<dependency>
 				<artifactId>jdbc-proc-daofactory</artifactId>
 				<groupId>com.googlecode.jdbc-proc.jdbc-proc</groupId>
-				<version>1.0-27</version>
+				<version>${jdbcproc.version}</version>
 				<exclusions>
 					<exclusion>
 						<artifactId>spring-jdbc</artifactId>
@@ -202,12 +202,12 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>1.4.2</version>
+				<version>${slf4j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-log4j12</artifactId>
-				<version>1.4.2</version>
+				<version>${slf4j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.servlet</groupId>
@@ -218,7 +218,7 @@
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-core</artifactId>
-				<version>2.0.4</version>
+				<version>${spring.security.version}</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.springframework</groupId>
@@ -249,7 +249,7 @@
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-core-tiger</artifactId>
-				<version>2.0.4</version>
+				<version>${spring.security.version}</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.springframework</groupId>
@@ -280,12 +280,12 @@
 		    <dependency>
 		    	<groupId>org.aspectj</groupId>
 		    	<artifactId>aspectjrt</artifactId>
-		    	<version>1.6.5</version>
+		    	<version>${aspectj.version}</version>
 		    </dependency>
 		    <dependency>
 		    	<groupId>org.aspectj</groupId>
 		    	<artifactId>aspectjweaver</artifactId>
-		    	<version>1.6.5</version>
+		    	<version>${aspectj.version}</version>
 		    </dependency>
             <dependency>
                 <groupId>org.opensymphony.quartz</groupId>
@@ -323,22 +323,22 @@
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket</artifactId>
-				<version>1.4.5</version>
+				<version>${wicket.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-spring</artifactId>
-				<version>1.4.5</version>
+				<version>${wicket.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-extensions</artifactId>
-				<version>1.4.5</version>
+				<version>${wicket.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-datetime</artifactId>
-				<version>1.4.5</version>
+				<version>${wicket.version}</version>
 			</dependency>
 		    
             <dependency>
@@ -359,7 +359,7 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-test</artifactId>
-				<version>2.5.6.SEC01</version>
+				<version>${spring.version}</version>
 				<scope>test</scope>
 			</dependency>
 			
@@ -367,31 +367,31 @@
 			<dependency>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty</artifactId>
-				<version>6.1.21</version>
+				<version>${jetty.version}</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-util</artifactId>
-				<version>6.1.21</version>
+				<version>${jetty.version}</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-management</artifactId>
-				<version>6.1.21</version>
+				<version>${jetty.version}</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-plus</artifactId>
-				<version>6.1.21</version>
+				<version>${jetty.version}</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-naming</artifactId>
-				<version>6.1.21</version>
+				<version>${jetty.version}</version>
 				<scope>provided</scope>
 			</dependency>
 			
@@ -480,6 +480,17 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<properties>
+		<jdbcproc.version>1.0-27</jdbcproc.version>
+		<slf4j.version>1.4.2</slf4j.version>
+		<spring.version>2.5.6.SEC01</spring.version>
+		<spring.security.version>2.0.4</spring.security.version>
+		<aspectj.version>1.6.5</aspectj.version>
+		
+		<wicket.version>1.4.5</wicket.version>
+		<jetty.version>6.1.21</jetty.version>
+	</properties>
 	
 	<profiles>
 		<profile>
