--- a/pom.xml
+++ b/pom.xml
@@ -442,6 +442,12 @@
 					</exclusion>
 	      	    </exclusions>
 	    	</dependency>
+	        <dependency>
+	        	<groupId>org.easymock</groupId>
+	        	<artifactId>easymock</artifactId>
+	        	<version>3.0</version>
+	        	<scope>test</scope>
+	        </dependency>
 		</dependencies>
 	</dependencyManagement>
 
