--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -50,5 +50,11 @@
             <groupId>org.opensymphony.quartz</groupId>
             <artifactId>quartz</artifactId>
         </dependency>
+        
+        <dependency>
+        	<groupId>org.easymock</groupId>
+        	<artifactId>easymock</artifactId>
+        	<scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
