--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,7 @@
         	/WEB-INF/spring/applicationContext-aop.xml
         	/WEB-INF/spring/applicationContext-quartz.xml
             /WEB-INF/spring/applicationContext-remote.xml
+            /WEB-INF/spring/applicationContext-web.xml
         </param-value>
     </context-param>
     <context-param>
