PNC-838 PCI DSS: Пароли в базе приложения, superfly должны быть закриптованы (crypting passwords when updating and checking)
git-svn-id: https://superfly.googlecode.com/svn/branches/superfly-1.2@511 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,15 @@
 		<param-value>superfly</param-value>
 	</context-param>
 	
+	<context-param>
+		<param-name>superfly-policy</param-name>
+		<param-value>none</param-value>
+	</context-param>
+	<context-param>
+		<param-name>superfly-salt</param-name>
+		<param-value>kdjfKJ48jfjf$Etj84f>DFJ48fj4fzFJdf8jADfj84fjaijdf84jfjzdfjakjfajf8j4qaq</param-value>
+	</context-param>
+	
     <listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
