--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>superfly-spring-security-2.0</module>
         <module>superfly-spring-security</module>
         <module>superfly-jira-integration</module>
+        <module>superfly-spi</module>
 	</modules>
 	
 	<url>http://code.google.com/p/superfly/</url>
@@ -153,6 +154,11 @@
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-spring-security-common</artifactId>
+				<version>1.2-1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>com.payneteasy.superfly</groupId>
+				<artifactId>superfly-spi</artifactId>
 				<version>1.2-1-SNAPSHOT</version>
 			</dependency>
 			
@@ -457,6 +463,11 @@
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+        	<groupId>org.easymock</groupId>
+        	<artifactId>easymock</artifactId>
+        	<scope>test</scope>
         </dependency>
     </dependencies>
 	
