--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -15,6 +15,10 @@
 			<artifactId>superfly-remote-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.payneteasy.superfly</groupId>
+			<artifactId>superfly-spi</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring</artifactId>
 		</dependency>
@@ -49,12 +53,6 @@
         <dependency>
             <groupId>org.opensymphony.quartz</groupId>
             <artifactId>quartz</artifactId>
-        </dependency>
-        
-        <dependency>
-        	<groupId>org.easymock</groupId>
-        	<artifactId>easymock</artifactId>
-        	<scope>test</scope>
         </dependency>
 	</dependencies>
 </project>
