--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -45,6 +45,15 @@
 		<param-value>kdjfKJ48jfjf$Etj84f>DFJ48fj4fzFJdf8jADfj84fjaijdf84jfjzdfjakjfajf8j4qaq</param-value>
 	</context-param>
 	
+	<context-param>
+		<param-name>superfly-logins-faild-isLocked</param-name>
+		<param-value>true</param-value>
+	</context-param>
+	<context-param>
+		<param-name>superfly-logins-faild-quantity</param-name>
+		<param-value>6</param-value>
+	</context-param>
+	
     <listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
