--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -12,8 +12,14 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.payneteasy.superfly</groupId>
+			<artifactId>superfly-common</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.payneteasy.superfly</groupId>
 			<artifactId>superfly-remote-api</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>com.payneteasy.superfly</groupId>
 			<artifactId>superfly-spi</artifactId>
