подкорректировал процедуру ui_user_unlock
git-svn-id: https://superfly.googlecode.com/svn/branches/superfly-1.2@551 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@
 	
 	<context-param>
 		<param-name>superfly-policy</param-name>
-		<param-value>none</param-value>
+		<param-value>pcidss</param-value>
 	</context-param>
 	<context-param>
 		<param-name>superfly-salt</param-name>
@@ -47,7 +47,7 @@
 	
 	<context-param>
 		<param-name>superfly-max-logins-faild</param-name>
-		<param-value>6</param-value>
+		<param-value>3</param-value>
 	</context-param>
 	
     <listener>
