--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@
 	
 	<context-param>
 		<param-name>superfly-policy</param-name>
-		<param-value>pcidss</param-value>
+		<param-value>none</param-value>
 	</context-param>
 	<context-param>
 		<param-name>superfly-salt</param-name>
