HOTP support (HOTP provider instantiation)
git-svn-id: https://superfly.googlecode.com/svn/branches/superfly-1.2@555 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>superfly-spring-security-2.0</module>
         <module>superfly-spring-security</module>
         <module>superfly-jira-integration</module>
+        <module>superfly-spi-support</module>
 	</modules>
 	
 	<url>http://code.google.com/p/superfly/</url>
