--- a/superfly-spi-support/pom.xml
+++ b/superfly-spi-support/pom.xml
@@ -6,15 +6,7 @@
     <version>1.2-1-SNAPSHOT</version>
   </parent>
   <groupId>com.payneteasy.superfly</groupId>
-  <artifactId>superfly-spi</artifactId>
-  <version>1.2-1-SNAPSHOT</version>
-  <name>SPI for Superfly</name>
-  <description>Interfaces for implementations of internal matters like HOTP processing</description>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.payneteasy.superfly</groupId>
-  		<artifactId>superfly-spi-support</artifactId>
-  		<version>1.2-1-SNAPSHOT</version>
-  	</dependency>
-  </dependencies>
+  <artifactId>superfly-spi-support</artifactId>
+  <name>Support classes for SPI mechanism</name>
+  <description>Classes which are used by both SPI implementations and Superfly core</description>
 </project>
