--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/page/user/EditUserPage.properties
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/page/user/EditUserPage.properties
@@ -1,3 +1,4 @@
-P001=Empty password
-P002=Password too short
-P003=Password is very simple
+P000=Empty password
+P001=Password too short
+P002=Password is very simple
+P003=Password was already used
