Added a console password encryptor
git-svn-id: https://superfly.googlecode.com/svn/branches/superfly-1.2@583 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,7 @@
 		<param-name>superfly-policy</param-name>
 		<param-value>none</param-value>
 	</context-param>
+	<!-- This is for constant salt generator -->
 	<context-param>
 		<param-name>superfly-salt</param-name>
 		<param-value>kdjfKJ48jfjf$Etj84f>DFJ48fj4fzFJdf8jADfj84fjaijdf84jfjzdfjakjfajf8j4qaq</param-value>
@@ -52,7 +53,9 @@
 
 	<!-- Modification of ANY of HOTP-related parameters here (except for
 		lookahead window size) must be followed by regeneration of user tokens
-		as server-side HOTP sequences will be changed -->	
+		as server-side HOTP sequences will be changed.
+		Table size leads to table of distinct size, but the sequence remains
+		the same. -->	
 	<context-param>
 		<param-name>superfly-hotpMasterKey</param-name>
 		<param-value>dakjf89j4f89j4faio[jf89j4fkl;mdAKDJFLAKJ4Fkdfjliajf894jfozjdf</param-value>
