HOTP for Superfly application itself
git-svn-id: https://superfly.googlecode.com/svn/branches/superfly-1.2@613 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/pom.xml
+++ b/superfly-web/pom.xml
@@ -20,6 +20,15 @@
 			<artifactId>superfly-client-opt</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.payneteasy.superfly</groupId>
+			<artifactId>superfly-spring-security</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
@@ -31,14 +40,28 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
 		</dependency>
+<!-- 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core-tiger</artifactId>
+		</dependency>
+ -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
 		</dependency>
         <dependency>
             <groupId>org.opensymphony.quartz</groupId>
             <artifactId>quartz</artifactId>
         </dependency>
+	    <dependency>
+	    	<groupId>commons-collections</groupId>
+	    	<artifactId>commons-collections</artifactId>
+	    </dependency>
         
 	    <dependency>
 	        <groupId>com.googlecode.xremoting</groupId>
