--- a/pom.xml
+++ b/pom.xml
@@ -159,13 +159,54 @@
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
+				<artifactId>superfly-spring-security</artifactId>
+				<version>1.2-1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-spi</artifactId>
 				<version>1.2-1-SNAPSHOT</version>
 			</dependency>
 			
 			<dependency>
 				<groupId>org.springframework</groupId>
-				<artifactId>spring</artifactId>
+				<artifactId>spring-core</artifactId>
+				<version>${spring.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>commons-logging</artifactId>
+                        <groupId>commons-logging</groupId>
+                    </exclusion>
+                </exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-beans</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context-support</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jdbc</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-tx</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-web</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
 			<dependency>
@@ -219,7 +260,7 @@
 			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>servlet-api</artifactId>
-				<version>2.4</version>
+				<version>2.5</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
@@ -248,11 +289,38 @@
 						<artifactId>spring-support</artifactId>
 					</exclusion>
 					<exclusion>
+						<groupId>org.springframework</groupId>
+						<artifactId>spring-tx</artifactId>
+					</exclusion>
+					<exclusion>
 						<groupId>commons-logging</groupId>
 						<artifactId>commons-logging</artifactId>
 					</exclusion>
 				</exclusions>
 			</dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-web</artifactId>
+                <version>${spring.security.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>commons-logging</artifactId>
+                        <groupId>commons-logging</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-config</artifactId>
+                <version>${spring.security.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>commons-logging</artifactId>
+                        <groupId>commons-logging</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+<!-- 
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-core-tiger</artifactId>
@@ -284,6 +352,7 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+ -->
 		    <dependency>
 		    	<groupId>org.aspectj</groupId>
 		    	<artifactId>aspectjrt</artifactId>
@@ -313,6 +382,11 @@
 		    	<groupId>commons-codec</groupId>
 		    	<artifactId>commons-codec</artifactId>
 		    	<version>1.3</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>commons-collections</groupId>
+		    	<artifactId>commons-collections</artifactId>
+		    	<version>3.2.1</version>
 		    </dependency>
 		    
 		    <dependency>
@@ -502,8 +576,9 @@
 	<properties>
 		<jdbcproc.version>1.0-27</jdbcproc.version>
 		<slf4j.version>1.4.2</slf4j.version>
-		<spring.version>2.5.6.SEC01</spring.version>
-		<spring.security.version>2.0.4</spring.security.version>
+		<spring.version>3.0.2.RELEASE</spring.version>
+		<spring.security.version>3.0.2.RELEASE</spring.security.version>
+		<spring.security_2.version>2.0.4</spring.security_2.version>
 		<aspectj.version>1.6.5</aspectj.version>
 		
 		<wicket.version>1.4.5</wicket.version>
