--- a/superfly-client-opt/pom.xml
+++ b/superfly-client-opt/pom.xml
@@ -16,7 +16,18 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring</artifactId>
+			<artifactId>spring-core</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -30,7 +41,7 @@
 		
 		<dependency>
 			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core-tiger</artifactId>
+			<artifactId>spring-security-core</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
