--- a/superfly-spring-security-common/pom.xml
+++ b/superfly-spring-security-common/pom.xml
@@ -18,7 +18,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring</artifactId>
+			<artifactId>spring-core</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
