--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>superfly-parent</artifactId>
 	<packaging>pom</packaging>
 	<name>Superfly parent project</name>
-	<version>1.2-1</version>
+	<version>1.2-2-SNAPSHOT</version>
 	<description>Parent POM of the Superfly project</description>
 	<modules>
 		<module>superfly-remote-api</module>
@@ -30,9 +30,9 @@
 	<url>http://code.google.com/p/superfly/</url>
 
 	<scm>
-		<connection>scm:svn:https://superfly.googlecode.com/svn/tags/superfly-parent-1.2-1</connection>
-		<developerConnection>scm:svn:https://superfly.googlecode.com/svn/tags/superfly-parent-1.2-1</developerConnection>
-		<url>http://superfly.googlecode.com/tags/superfly-parent-1.2-1</url>
+		<connection>scm:svn:https://superfly.googlecode.com/svn/trunk/superfly/</connection>
+		<developerConnection>scm:svn:https://superfly.googlecode.com/svn/trunk/superfly/</developerConnection>
+		<url>http://superfly.googlecode.com/</url>
 	</scm>
 	
 	<licenses>
@@ -125,47 +125,47 @@
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-remote-api</artifactId>
-				<version>1.2-1</version>
+				<version>1.2-2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-service</artifactId>
-				<version>1.2-1</version>
+				<version>1.2-2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-httpclient-ssl</artifactId>
-				<version>1.2-1</version>
+				<version>1.2-2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-common</artifactId>
-				<version>1.2-1</version>
+				<version>1.2-2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-client</artifactId>
-				<version>1.2-1</version>
+				<version>1.2-2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-client-opt</artifactId>
-				<version>1.2-1</version>
+				<version>1.2-2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-spring-security-common</artifactId>
-				<version>1.2-1</version>
+				<version>1.2-2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-spring-security</artifactId>
-				<version>1.2-1</version>
+				<version>1.2-2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-spi</artifactId>
-				<version>1.2-1</version>
+				<version>1.2-2-SNAPSHOT</version>
 			</dependency>
 			
 			<dependency>
