Changed default session timeout duration to 15 minutes
git-svn-id: https://superfly.googlecode.com/svn/branches/superfly-1.3@629 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
     
     <display-name>Superfly</display-name>
     
+    <session-config>
+    	<session-timeout>15</session-timeout>
+    </session-config>
+    
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
