--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,11 @@
 	</context-param>
 	
 	<context-param>
+		<param-name>syslog-ip</param-name>
+		<param-value>localhost</param-value>
+	</context-param>
+	
+	<context-param>
 		<param-name>superfly-policy</param-name>
 		<param-value>none</param-value>
 	</context-param>
