--- a/superfly-web/src/main/webapp/WEB-INF/log4j.properties
+++ b/superfly-web/src/main/webapp/WEB-INF/log4j.properties
@@ -16,3 +16,8 @@ log4j.rootLogger=WARN,console
 log4j.logger.com.payneteasy=DEBUG
 #log4j.logger.org.springframework=DEBUG
 #log4j.logger.com.googlecode=DEBUG
+
+log4j.logger.com.payneteasy.superfly.service.impl.SyslogServiceImpl=INFO,syslog,console
+log4j.appender.syslog=org.apache.log4j.net.SyslogAppender
+log4j.appender.syslog.SyslogHost=localhost
+log4j.appender.syslog.layout=org.apache.log4j.PatternLayout
