раскомментировал SyslogAppender в log4j.properties
git-svn-id: https://superfly.googlecode.com/svn/branches/superfly-1.3@639 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/WEB-INF/log4j.properties
+++ b/superfly-web/src/main/webapp/WEB-INF/log4j.properties
@@ -3,15 +3,15 @@ log4j.appender.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.conversionPattern=%-5p %-26.26c{1} - %m\n
 
-#log4j.appender.syslog=org.apache.log4j.net.SyslogAppender
-#log4j.appender.syslog.SyslogHost=127.0.0.1
+
+log4j.appender.syslog=org.apache.log4j.net.SyslogAppender
+log4j.appender.syslog.SyslogHost=localhost
 #log4j.appender.syslog.Facility=USER
 #log4j.appender.syslog.FacilityPrinting=true
-#log4j.appender.syslog.layout=org.apache.log4j.PatternLayout
+log4j.appender.syslog.layout=org.apache.log4j.PatternLayout
 #log4j.appender.syslog.layout.conversionPattern=%-5p %-21d{yyyyMMdd HH:mm:ss,SSS} %-26.26c{1} - %m\n
 
-log4j.rootLogger=WARN,console
-#,syslog
+log4j.rootLogger=WARN,console,syslog
 
 log4j.logger.com.payneteasy=DEBUG
 #log4j.logger.org.springframework=DEBUG
