--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>superfly-spring-security</module>
         <module>superfly-jira-integration</module>
         <module>superfly-spi-support</module>
+        <module>superfly-crypto</module>
 	</modules>
 	
 	<url>http://code.google.com/p/superfly/</url>
