Public key validation
git-svn-id: https://superfly.googlecode.com/svn/branches/superfly-1.3@645 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/pom.xml
+++ b/superfly-web/pom.xml
@@ -23,6 +23,11 @@
 			<groupId>com.payneteasy.superfly</groupId>
 			<artifactId>superfly-spring-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.payneteasy.superfly</groupId>
+			<artifactId>superfly-crypto</artifactId>
+		</dependency>
+
 		
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -138,7 +143,6 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
-
 	</dependencies>
 	<build>
 		<resources>
