--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,11 @@
 				<artifactId>superfly-spi</artifactId>
 				<version>1.2-2-SNAPSHOT</version>
 			</dependency>
+			<dependency>
+				<groupId>com.payneteasy.superfly</groupId>
+				<artifactId>superfly-crypto</artifactId>
+				<version>1.2-2-SNAPSHOT</version>
+			</dependency>
 			
 			<dependency>
 				<groupId>org.springframework</groupId>
@@ -524,6 +529,13 @@
 					</exclusion>
 	      	    </exclusions>
 	    	</dependency>
+	    	
+			<dependency>
+				<groupId>org.bouncycastle</groupId>
+				<artifactId>bcpg-jdk15</artifactId>
+				<version>1.45</version>
+			</dependency>
+	    	
 	        <dependency>
 	        	<groupId>org.easymock</groupId>
 	        	<artifactId>easymock</artifactId>
