--- a/pom.xml
+++ b/pom.xml
@@ -406,6 +406,17 @@
 		        <version>1.1.1</version>
 		    </dependency>
 		    
+	        <dependency>
+	        	<groupId>org.apache.velocity</groupId>
+	        	<artifactId>velocity</artifactId>
+	        	<version>1.6.4</version>
+	        </dependency>
+	        <dependency>
+	        	<groupId>javax.mail</groupId>
+	        	<artifactId>mail</artifactId>
+	        	<version>1.4</version>
+	        </dependency>
+		    
 			<!-- WICKET DEPENDENCIES -->
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
