--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -87,6 +87,7 @@
         <dependency>
         	<groupId>javax.mail</groupId>
         	<artifactId>mail</artifactId>
+        	<scope>provided</scope>
         </dependency>
 	</dependencies>
 </project>
