--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>superfly-jira-integration</module>
         <module>superfly-spi-support</module>
         <module>superfly-crypto</module>
+        <module>superfly-wicket</module>
 	</modules>
 	
 	<url>http://code.google.com/p/superfly/</url>
@@ -171,6 +172,11 @@
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-crypto</artifactId>
+				<version>1.2-2-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>com.payneteasy.superfly</groupId>
+				<artifactId>superfly-wicket</artifactId>
 				<version>1.2-2-SNAPSHOT</version>
 			</dependency>
 			
