--- a/superfly-web/pom.xml
+++ b/superfly-web/pom.xml
@@ -27,6 +27,10 @@
 			<groupId>com.payneteasy.superfly</groupId>
 			<artifactId>superfly-crypto</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.payneteasy.superfly</groupId>
+			<artifactId>superfly-wicket</artifactId>
+		</dependency>
 
 		
 		<dependency>
