--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -43,7 +43,7 @@
 	
 	<context-param>
 		<param-name>superfly-policy</param-name>
-		<param-value>none</param-value>
+		<param-value>pcidss</param-value>
 	</context-param>
 	<!-- This is for constant salt generator -->
 	<context-param>
