Email send failure is distintible
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@689 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-spi-support/pom.xml
+++ b/superfly-spi-support/pom.xml
@@ -15,6 +15,10 @@
 			<groupId>com.googlecode.jdbc-proc.jdbc-proc</groupId>
 			<artifactId>jdbc-proc-daofactory</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.payneteasy.superfly</groupId>
+			<artifactId>superfly-remote-api</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
