[maven-release-plugin] prepare for next development iteration
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@702 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-remote-api/pom.xml
+++ b/superfly-remote-api/pom.xml
@@ -2,12 +2,12 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-		<version>1.2-4</version>
+		<version>1.2-5-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-remote-api</artifactId>
 	<name>Superfly Remote API</name>
-	<version>1.2-4</version>
+	<version>1.2-5-SNAPSHOT</version>
 	<description>API classes for Superfly server which can be used by clients</description>
 </project>
