--- a/superfly-crypto/pom.xml
+++ b/superfly-crypto/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-		<version>1.2-4</version>
+		<version>1.2-5-SNAPSHOT</version>
 	</parent>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-crypto</artifactId>
