--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -83,6 +83,11 @@
 		<param-value>dummy@no.such.address.df</param-value>
 	</context-param>
 	
+	<context-param>
+		<param-name>disable-hotp</param-name>
+		<param-value>false</param-value>
+	</context-param>
+	
     <listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
