[maven-release-plugin] prepare for next development iteration
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@723 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-common/pom.xml
+++ b/superfly-common/pom.xml
@@ -2,13 +2,13 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-		<version>1.2-7</version>
+		<version>1.2-8-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-common</artifactId>
 	<name>Common classes</name>
-	<version>1.2-7</version>
+	<version>1.2-8-SNAPSHOT</version>
 	<description>Common classes used by other Superfly libraries</description>
 	<dependencies>
 		<dependency>
