добивил компоненты, переделал формы
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@735 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
@@ -2,3 +2,71 @@ PublicKeyValidator.noBeginBlock=Begin block is expected in the public key, i.e. 
 PublicKeyValidator.noEndBlock=End block is expected in the public key, i.e. the following: -----END PGP PUBLIC KEY BLOCK-----
 PublicKeyValidator.wrongBlockOrder=End block cannot precede begin block in the public key
 PublicKeyValidator.invalidKey=The key is invalid
+
+#
+#SUBSYSTEM
+#
+subsystem.add.name=Name
+subsystem.add.name.Required=Name is required
+subsystem.add.callback=Callback Info
+subsystem.add.callback.Required=Callback Info is required
+subsystem.add.allow-list-users=Allow list users
+subsystem.edit.name=Name
+subsystem.edit.name.Required=Name is required
+subsystem.edit.callback=Callback Info
+subsystem.edit.callback.Required=Callback Info is required
+subsystem.edit.allow-list-users=Allow list users
+
+#
+#USER
+#
+user.clone.template-name=Template user
+user.no-more-sub=No more subsystems
+user.no-more-roles=No more roles
+user.name=User name
+user.subsystem=Subsystem
+user.role=Role
+user.role.Required=Role is required
+user.create.username=User name
+user.create.username.Required=User name is required
+user.create.email=Email
+user.create.email.Required=Email is required
+user.create.password=Password
+user.create.password.Required=Password is required
+user.create.password2=Password confirmation
+user.create.password2.EqualPasswordInputValidator=Password and confirmation must match
+user.create.password2.Required=Password confirmation is required
+user.create.publicKey=Public key
+user.create.name=Name
+user.create.name.Required=Name is required
+user.create.surname=Surname
+user.create.surname.Required=Surname is required
+user.create.secret-question=Secret question
+user.create.secret-question.Required=Secret question is required
+user.create.secret-answer=Secret answer
+user.create.secret-answer.Required=Secret answer is required
+user.create.choice-subsystem=Subsystem
+user.create.choice-subsystem.Required=Subsystem is required
+user.create.choice-roles=Role
+user.create.choice-roles.Required=Role is required
+
+#
+#GROUP
+#
+group.create.choice-subsystem=Subsystem
+group.create.choice-subsystem.Required=Subsystem is required
+group.create.name=Group name
+group.create.name.Required=Group name is required
+group.clone.name=New Group Name
+group.clone.name.Required=New Group Name is required
+group.clone.source=Source
+
+#
+#ROLE
+#
+role.create.subsystem=Subsystem
+role.create.subsystem.Required=Subsystem is required
+role.create.name=Role name
+role.create.name.Required=Role name is required
+role.create.principal-name=Principal name
+role.create.principal-name.Required=Principal name is required
