[maven-release-plugin] prepare for next development iteration
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@749 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-spi/pom.xml
+++ b/superfly-spi/pom.xml
@@ -3,18 +3,18 @@
   <parent>
     <artifactId>superfly-parent</artifactId>
     <groupId>com.payneteasy.superfly</groupId>
-    <version>1.2-9</version>
+    <version>1.2-10-SNAPSHOT</version>
   </parent>
   <groupId>com.payneteasy.superfly</groupId>
   <artifactId>superfly-spi</artifactId>
-  <version>1.2-9</version>
+  <version>1.2-10-SNAPSHOT</version>
   <name>SPI for Superfly</name>
   <description>Interfaces for implementations of internal matters like HOTP processing</description>
   <dependencies>
   	<dependency>
   		<groupId>com.payneteasy.superfly</groupId>
   		<artifactId>superfly-spi-support</artifactId>
-  		<version>1.2-9</version>
+  		<version>1.2-10-SNAPSHOT</version>
   	</dependency>
   </dependencies>
 </project>
