--- a/superfly-demo/pom.xml
+++ b/superfly-demo/pom.xml
@@ -19,6 +19,14 @@
             <name>jdbc proc release</name>
             <url>http://jdbc-proc.googlecode.com/svn/maven2/release</url>
         </repository>
+
+        <repository>
+            <id>jetty</id>
+            <name>jetty repo</name>
+            <url>http://repo.exist.com/maven2</url>
+        </repository>
+
+
 	</repositories>
 	
 	<dependencies>
@@ -63,7 +71,7 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>2.4</version>
+			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -112,33 +120,40 @@
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jetty</artifactId>
-			<version>6.1.21</version>
+			<version>6.1.26</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jetty-util</artifactId>
-			<version>6.1.21</version>
+			<version>6.1.26</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jetty-management</artifactId>
-			<version>6.1.21</version>
+			<version>6.1.26</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jetty-plus</artifactId>
-			<version>6.1.21</version>
+			<version>6.1.26</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jetty-naming</artifactId>
-			<version>6.1.21</version>
+			<version>6.1.26</version>
 			<scope>provided</scope>
 		</dependency>
+
+ <dependency>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jsp-2.1-jetty</artifactId>
+        <version>6.1.26</version>
+    </dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
