Fixed dependency problem revealed by maven update
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@753 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-client-opt/pom.xml
+++ b/superfly-client-opt/pom.xml
@@ -32,6 +32,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.payneteasy.superfly</groupId>
+			<artifactId>superfly-remote-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.payneteasy.superfly</groupId>
 			<artifactId>superfly-client</artifactId>
 		</dependency>
 		<dependency>
