Removed unneeded dependency
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@754 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-jira-integration/pom.xml
+++ b/superfly-jira-integration/pom.xml
@@ -30,6 +30,12 @@
 		<dependency>
 			<groupId>com.atlassian.jira</groupId>
 			<artifactId>atlassian-jira</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>ofbcore</groupId>
+					<artifactId>ofbcore-xerces</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	    <dependency>
 	        <groupId>com.googlecode.xremoting</groupId>
