[maven-release-plugin] prepare release superfly-parent-1.3-3
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@820 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-crypto/pom.xml
+++ b/superfly-crypto/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-		<version>1.3-3-SNAPSHOT</version>
+		<version>1.3-3</version>
 	</parent>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-crypto</artifactId>
