Single-sign on via redirects (in progress)
git-svn-id: https://superfly.googlecode.com/svn/branches/superfly-redirects@858 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/pom.xml
+++ b/superfly-web/pom.xml
@@ -166,6 +166,10 @@
 			</resource>
 		</resources>
 		<testResources>
+            <testResource>
+                <filtering>false</filtering>
+                <directory>src/test/resources</directory>
+            </testResource>
 			<testResource>
 				<filtering>false</filtering>
 				<directory>src/test/java</directory>
