--- a/superfly-web/src/test/resources/log4j.properties
+++ b/superfly-web/src/test/resources/log4j.properties
@@ -3,7 +3,9 @@ log4j.appender.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.conversionPattern=%-5p %-26.26c{1} - %m\n
 
-log4j.rootLogger=WARN,console
+log4j.rootLogger=INFO,console
 
 log4j.logger.com.payneteasy=DEBUG
 #log4j.logger.org.springframework=DEBUG
+
+log4j.logger.org.apache.wicket.util.resource.locator.ResourceStreamLocator=DEBUG
