--- a/superfly-web/src/test/resources/log4j.properties
+++ b/superfly-web/src/test/resources/log4j.properties
@@ -8,4 +8,4 @@ log4j.rootLogger=INFO,console
 #log4j.logger.com.payneteasy=DEBUG
 #log4j.logger.org.springframework=DEBUG
 
-log4j.logger.org.apache.wicket.util.resource.locator.ResourceStreamLocator=DEBUG
+#log4j.logger.org.apache.wicket.util.resource.locator.ResourceStreamLocator=DEBUG
