Single sign on via redirects (in progress) - landing_url editing on subsystem
git-svn-id: https://superfly.googlecode.com/svn/branches/superfly-redirects@863 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
@@ -10,11 +10,15 @@ subsystem.add.name=Name
 subsystem.add.name.Required=Name is required
 subsystem.add.callback=Callback Info
 subsystem.add.callback.Required=Callback Info is required
+subsystem.add.landingUrl=Landing URL
+subsystem.add.landingUrl.Required=Landing URL is required
 subsystem.add.allow-list-users=Allow list users
 subsystem.edit.name=Name
 subsystem.edit.name.Required=Name is required
 subsystem.edit.callback=Callback Info
 subsystem.edit.callback.Required=Callback Info is required
+subsystem.edit.landingUrl=Landing URL
+subsystem.edit.landingUrl.Required=Landing URL is required
 subsystem.edit.allow-list-users=Allow list users
 subsystem.smtpServer=SMTP server
 
